# spektrafilm-rs

./: .gitignore  Cargo.toml  README.md
crates/spektrafilm-cli/: Cargo.toml
crates/spektrafilm-cli/src/: main.rs
crates/spektrafilm-core/: Cargo.toml
crates/spektrafilm-core/src/: data.rs  enlarger.rs  lib.rs  neutral_filters.rs  params.rs  pipeline.rs  profile.rs  spectral_service.rs
crates/spektrafilm-core/src/stages/: debug_compare.rs  filming.rs  mod.rs  printing.rs  scanning.rs
crates/spektrafilm-gpu/: Cargo.toml
crates/spektrafilm-gpu/examples/: blur_bench.rs
crates/spektrafilm-gpu/src/: cpu_backend.rs  lib.rs  wgpu_backend.rs
crates/spektrafilm-gui/: Cargo.toml
crates/spektrafilm-gui/src/: main.rs
crates/spektrafilm-math/: Cargo.toml
crates/spektrafilm-math/src/: colorspace.rs  gaussian.rs  image.rs  interp.rs  lib.rs  lut.rs  npy.rs  numpy_rng.rs  pchip3d.rs  precision.rs  spectral.rs  stats.rs  vforce.rs
crates/spektrafilm-model/: Cargo.toml
crates/spektrafilm-model/src/: couplers.rs  density_curves.rs  diffusion.rs  emulsion.rs  glare.rs  grain.rs  illuminants.rs  lib.rs
crates/spektrafilm-shaders/cuda/: grain.cu  print_spectral.cu  scan_spectral.cu
crates/spektrafilm-shaders/metal/: gaussian_blur.metal  print_spectral.metal  scan_spectral.metal
crates/spektrafilm-shaders/wgsl/: add_scaled.wgsl  add_scaled_per_channel.wgsl  density_curve_interp.wgsl  density_interp.wgsl  dir_matmul.wgsl  gaussian_blur_h.wgsl  gaussian_blur_v.wgsl  glare_apply.wgsl  glare_gen.wgsl  grain.wgsl  halation_renormalize.wgsl  hanatos2025_rgb_to_raw.wgsl  log10_inplace.wgsl  print_spectral.wgsl  scan_spectral.wgsl  scatter_mix.wgsl  unsharp_combine.wgsl
data/filters/: neutral_print_filters.json
data/filters/dichroics/durst_digital_light/: filter_c.csv  filter_m.csv  filter_y.csv
data/filters/dichroics/edmund_optics/: filter_c.csv  filter_m.csv  filter_y.csv  info.txt
data/filters/dichroics/thorlabs/: filter_c.csv  filter_m.csv  filter_y.csv
data/filters/heat_absorbing/schott/: KG1.csv  KG3.csv  KG5.csv  info.txt
data/filters/lens_transmission/canon/: canon_24_f28_is.csv  canon_24_f28_is_info.txt
data/profiles/: fujifilm_c200.json  fujifilm_crystal_archive_typeii.json  fujifilm_pro_400h.json  fujifilm_provia_100f.json  fujifilm_velvia_100.json  fujifilm_xtra_400.json  kodak_2383.json  kodak_2393.json  kodak_ektachrome_100.json  kodak_ektacolor_edge.json  kodak_ektar_100.json  kodak_endura_premier.json  kodak_gold_200.json  kodak_kodachrome_64.json  kodak_portra_160.json  kodak_portra_400.json  kodak_portra_800.json  kodak_portra_800_push1.json  kodak_portra_800_push2.json  kodak_portra_endura.json  kodak_supra_endura.json  kodak_ultra_endura.json  kodak_ultramax_400.json  kodak_verita_200d.json  kodak_vision3_200t.json  kodak_vision3_250d.json  kodak_vision3_500t.json  kodak_vision3_50d.json
scripts/parity/: README.md  py_bisect.py  py_stages.py  rs_bisect.rs  spektra_compare.py
