[package]
name = "spektrafilm-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
precision-f64 = [
    "spektrafilm-math/precision-f64",
    "spektrafilm-gpu/precision-f64",
    "spektrafilm-model/precision-f64",
]

[dependencies]
spektrafilm-math.workspace = true
spektrafilm-gpu.workspace = true
spektrafilm-model.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
thiserror.workspace = true
tracing.workspace = true
libm.workspace = true
cblas = "0.4"
blas-src = { version = "0.10", features = ["accelerate"] }
